# robotics

./: .gitignore
src/CR5_ROS/cr5_moveit/config/: cr5_robot.srdf  ros_controllers.yaml
src/CR5_ROS/cr5_moveit/launch/: moveit.rviz
src/CR5_ROS/dobot_bringup/: CMakeLists.txt  package.xml
src/CR5_ROS/dobot_bringup/include/dobot_bringup/: commander.h
src/CR5_ROS/dobot_bringup/scripts/: home_real_v4.py  moveit_flow_test_real_v4.py  pick_place_moveit_real_v4.py  pick_place_real_v4.py  wave_real.py  wave_real_v4.py
src/CR5_ROS/dobot_description/: CMakeLists.txt  package.xml
src/CR5_ROS/dobot_description/launch/: pick_place_demo.launch  wave_demo.launch
src/CR5_ROS/dobot_description/rviz/: pick_place_demo.rviz  urdf.rviz
src/CR5_ROS/dobot_description/scripts/: pick_place_demo.py  wave_demo.py
src/CR5_ROS/dobot_description/urdf/: cr5_robot.urdf
